<resources>
    <string name="app_name" translatable="false">Marooned</string>
    <string name="firstrun_login_title">Log in</string>
    <string name="firstrun_login_message">You are not currently logged in. You can access the account list by selecting "Accounts" from the menu.</string>
    <string name="firstrun_login_button_now">Log in now</string>
    <string name="firstrun_login_button_later">Be anonymous</string>
    <string name="prefs_category_appearance">Appearance &amp; layout</string>
    <string name="prefs_category_behaviour">Behaviour, sort, &amp; content</string>
    <string name="prefs_category_cache">Pre-caching</string>
    <string name="prefs_category_menus">Menus &amp; shortcuts</string>
    <string name="pref_appearance_theme_header">Theme</string>
    <string name="pref_appearance_thumbnails_header">Thumbnails</string>
    <string name="pref_appearance_comments_header">Comments</string>
    <string name="pref_appearance_other_header">Other</string>
    <string name="pref_appearance_twopane_key" translatable="false">pref_appearance_twopane</string>
    <string name="pref_appearance_twopane_title">Tablet mode (two pane)</string>
    <string name="pref_appearance_theme_key" translatable="false">pref_appearance_theme</string>
    <string name="pref_appearance_theme_title">Theme</string>
    <string name="pref_appearance_solidblack_title">Solid black in night mode</string>
    <string name="pref_appearance_fontscale_posts_key" translatable="false">pref_appearance_fontscale_posts</string>
    <string name="pref_appearance_fontscale_posts_title">Post titles</string>
    <string name="pref_appearance_thumbnails_show_key" translatable="false">pref_appearance_thumbnails_show</string>
    <string name="pref_appearance_thumbnails_show_title">Show thumbnails</string>
    <string name="pref_appearance_thumbnails_nsfw_show_key" translatable="false">pref_appearance_thumbnails_nsfw_show</string>
    <string name="pref_appearance_thumbnails_nsfw_show_title">Show NSFW thumbnails</string>
    <string name="pref_appearance_thumbnails_wifionly_key" translatable="false">pref_appearance_thumbnails_wifionly</string>
    <string name="pref_appearance_thumbnails_wifionly_title">Thumbnails on Wi-Fi only</string>
    <string name="pref_appearance_loading_detail_key" translatable="false">pref_appearance_loading_detail</string>
    <string name="pref_appearance_loading_detail_title">Show detailed loading messages</string>
    <string name="pref_appearance_comment_header_items_key" translatable="false">pref_appearance_comment_header_items</string>
    <string name="pref_appearance_comment_header_items_title">Comment header entries</string>
    <string name="pref_behaviour_notifications_key" translatable="false">pref_behaviour_notifications</string>
    <string name="pref_behaviour_notifications_title">Notifications</string>
    <string name="pref_behaviour_actions_post_header">Post Actions</string>
    <string name="pref_behaviour_actions_comment_header">Comment Actions</string>
    <string name="pref_behaviour_posts_header">Posts</string>
    <string name="pref_behaviour_fling_post_left_key" translatable="false">pref_behaviour_fling_post_left</string>
    <string name="pref_behaviour_fling_post_left_title">Fling left</string>
    <string name="pref_behaviour_fling_post_right_key" translatable="false">pref_behaviour_fling_post_right</string>
    <string name="pref_behaviour_fling_post_right_title">Fling right</string>
    <string name="pref_behaviour_actions_comment_tap_key" translatable="false">pref_behaviour_actions_comment_tap</string>
    <string name="pref_behaviour_actions_comment_tap_title">Press</string>
    <string name="pref_behaviour_nsfw_key" translatable="false">pref_behaviour_nsfw</string>
    <string name="pref_behaviour_nsfw_title">Show NSFW content</string>
    <string name="pref_cache_pruning">Cache Pruning</string>
    <string name="pref_cache_maxage_listing_key" translatable="false">pref_cache_maxage_listing</string>
    <string name="pref_cache_maxage_listing_title">Delete cached listings after</string>
    <string name="pref_cache_maxage_thumb_key" translatable="false">pref_cache_maxage_thumb</string>
    <string name="pref_cache_maxage_thumb_title">Delete cached thumbnails after</string>
    <string name="pref_cache_maxage_image_key" translatable="false">pref_cache_maxage_image</string>
    <string name="pref_cache_maxage_image_title">Delete cached images after</string>
	<string name="pref_cache_maxage_entry_key" translatable="false">pref_cache_maxage_entry</string>
	<string name="pref_cache_maxage_entry_title">Delete cached flags (read, upvoted, etc.) after</string>
    <string name="pref_cache_precache_images_header">Precache Images</string>
    <string name="pref_cache_precache_images_key" translatable="false">pref_cache_precache_images</string>
    <string name="pref_cache_precache_images_title">Precache images</string>
    <string name="pref_cache_precache_images_wifionly_key" translatable="false">pref_cache_precache_images_wifionly</string>
    <string name="pref_cache_precache_images_wifionly_title">On Wi-Fi only</string>
    <string name="pref_menus_post_context_items_key" translatable="false">pref_menus_post_context_items_2</string>
    <string name="pref_menus_post_context_items_title">Action menu items</string>
    <string name="pref_menus_post_toolbar_items_key" translatable="false">pref_menus_post_toolbar_items</string>
    <string name="pref_menus_post_toolbar_items_title">Side-toolbar items</string>
    <string name="options_accounts">Accounts</string>
    <string name="options_accounts_long">Reddit Accounts</string>
    <string name="options_theme">Themes</string>
    <string name="options_settings">Settings</string>
    <string name="options_submit_post">Submit Post</string>
    <string name="options_refresh">Refresh</string>
    <string name="options_refresh_subreddits">Refresh Subreddits</string>
    <string name="options_refresh_posts">Refresh Posts</string>
    <string name="options_refresh_comments">Refresh Comments</string>
    <string name="options_past">Past Versions</string>
    <string name="options_past_posts">Past Post List Versions</string>
    <string name="options_past_comments">Past Comment List Versions</string>
    <string name="options_sort">Sort</string>
    <string name="options_sort_subreddits">Sort Subreddits</string>
    <string name="options_sort_posts">Sort Posts</string>
    <string name="options_sort_comments">Sort Comments</string>
    <string name="mainmenu_frontpage">Front Page</string>
    <string name="mainmenu_all">All Subreddits</string>
    <string name="mainmenu_custom">Custom Subreddit</string>
    <string name="mainmenu_custom_invalid_name">Invalid subreddit name.</string>
    <string name="mainmenu_saved">Saved Posts</string>
    <string name="mainmenu_hidden">Hidden Posts</string>
    <string name="mainmenu_upvoted">Upvoted Posts</string>
    <string name="mainmenu_inbox">Inbox</string>
    <string name="mainmenu_profile">My Profile</string>
    <string name="mainmenu_header_subreddits">Subreddits</string>
    <string name="listing_cached">Viewing cached copy from %s</string>
    <string name="accounts_anon">Anonymous</string>
    <string name="accounts_active">Active</string>
    <string name="accounts_add">Add Reddit Account</string>
    <string name="accounts_setactive">Make Active</string>
    <string name="accounts_reauth">Reauthenticate</string>
    <string name="accounts_delete">Delete</string>
    <string name="accounts_loggingin">Logging in…</string>
    <string name="accounts_loggingin_msg">Just a moment…</string>
    <string name="accounts_username">Username</string>
    <string name="accounts_password">Password</string>
    <string name="accounts_login">Login</string>
    <string name="accounts_delete_sure">Are you sure you want to delete this account?</string>
    <string name="sort_posts_hot">Hot</string>
    <string name="sort_posts_new">New</string>
    <string name="sort_posts_rising">Rising</string>
    <string name="sort_posts_controversial">Controversial</string>
    <string name="sort_posts_top">Top</string>
    <string name="sort_posts_top_hour">Top: This Hour</string>
    <string name="sort_posts_top_today">Top: Today</string>
    <string name="sort_posts_top_week">Top: This Week</string>
    <string name="sort_posts_top_month">Top: This Month</string>
    <string name="sort_posts_top_year">Top: This Year</string>
    <string name="sort_posts_top_all">Top: All Time</string>
    <string name="sort_comments_best">Best</string>
    <string name="sort_comments_hot">Hot</string>
    <string name="sort_comments_new">New</string>
    <string name="sort_comments_old">Old</string>
    <string name="sort_comments_controversial">Controversial</string>
    <string name="sort_comments_top">Top</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_go">Go</string>
    <string name="action_menu_post_title">Post Actions</string>
    <string name="action_upvote">Upvote</string>
    <string name="action_downvote">Downvote</string>
    <string name="action_vote_remove">Remove Vote</string>
    <string name="action_upvote_remove">Remove Upvote</string>
    <string name="action_downvote_remove">Remove Downvote</string>
    <string name="action_save">Save</string>
    <string name="action_hide">Hide</string>
    <string name="action_unsave">Unsave</string>
    <string name="action_unhide">Unhide</string>
    <string name="action_external">View in External Browser</string>
    <string name="action_external_short">In Browser</string>
    <string name="action_actionmenu_short">Actions</string>
    <string name="action_actionmenu">Action Menu</string>
    <string name="action_comment_links">Links in Comment</string>
    <string name="action_selftext_links">Links in Self Text</string>
    <string name="action_share">Share</string>
    <string name="action_share_comments">Share Comments</string>
    <string name="action_copy">Copy</string>
    <string name="action_gotosubreddit">Go to Subreddit</string>
    <string name="action_reply">Reply</string>
    <string name="action_edit">Edit</string>
    <string name="action_user_profile">User Profile</string>
    <string name="action_user_profile_short">User</string>
    <string name="action_properties">Properties</string>
    <string name="action_comments">View Comments</string>
    <string name="action_comments_switch">Switch To Comments</string>
    <string name="action_comments_short">Comments</string>
    <string name="action_link">Open Link</string>
    <string name="action_link_switch">Switch To Link</string>
    <string name="action_link_short">Link</string>
    <string name="action_collapse">Toggle Collapse</string>
    <string name="action_nothing">Do Nothing</string>
    <string name="action_report">Report</string>
    <string name="action_report_sure">Are you sure you want to report this?</string>
    <string name="action_save_image">Save Image</string>
    <string name="action_save_image_success">Saved to Pictures folder as</string>
    <string name="download_waiting">Waiting…</string>
    <string name="download_connecting">Connecting…</string>
    <string name="download_downloadstarting">Download starting…</string>
    <string name="comment_reply_send">Send</string>
    <string name="comment_reply_preview">Preview</string>
	<string name="send_replies_to_inbox">Send replies to my inbox</string>
	<string name="comment_help">Help</string>
	<string name="reddit_help_link_example">[reddit!](https://reddit.com)</string>
	<string name="reddit_help_link_example_result"><u>reddit!</u></string>
	<string name="strike_strikethrough_strike"><strike> strikethrough </strike></string>
	<string name="comment_help_super_script">super<sup>script</sup></string>
</resources>