<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of Marooned.
  ~
  ~ Marooned is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Marooned is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Marooned.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

	<Spinner
			android:id="@+id/comment_reply_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp" />

	<TextView
			android:id="@+id/comment_parent_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:textIsSelectable="true" />

	<EditText
			android:id="@+id/comment_reply_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:padding="6dp"
			android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
			android:scrollHorizontally="false"
			android:minLines="3"
			android:scrollbars="none"
			android:singleLine="false"
			android:importantForAutofill="no"
			android:background="?rrListItemBackgroundCol" />


	<CheckBox
			android:id="@+id/comment_reply_inbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:checked="true"
			android:visibility="gone"
			android:text="@string/send_replies_to_inbox" />

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="right"
			android:layout_margin="10dp">

		<Button
				android:id="@+id/comment_reply_help"
				android:text="@string/comment_help"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

		<Button
				android:id="@+id/comment_reply_preview"
				android:text="@string/comment_reply_preview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

		<Button
				android:id="@+id/comment_reply_button"
				android:text="@string/comment_reply_send"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>

	</LinearLayout>

	<TableLayout
			android:id="@+id/comment_help_table"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="*"
			android:layout_margin="10dp">

		<TableRow
				android:background="?rrListItemBackgroundCol"
				>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="You type:" />
			<TextView
					android:padding="10dp"
					android:text="You see:" />
		</TableRow>


		<TableRow>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="*italics*" />
			<TextView
					android:padding="10dp"
					android:text="italics"
					android:textStyle="italic"/>
		</TableRow>

		<TableRow>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="**bold**" />
			<TextView
					android:padding="10dp"
					android:text="bold"
					android:textStyle="bold"/>
		</TableRow>

		<TableRow>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="@string/reddit_help_link_example" />
			<TextView
					android:padding="10dp"
					android:text="@string/reddit_help_link_example_result"
					android:textColor="#0000ff"/>
		</TableRow>


		<TableRow>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="> quoted text" />

			<LinearLayout
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
				<View
						android:layout_width="3dp"
						android:layout_marginRight="3dp"
						android:layout_height="match_parent"
						android:background="#888888"/>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="quoted text"/>
			</LinearLayout>
		</TableRow>

		<TableRow>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="~~strikethrough~~" />
			<TextView
					android:padding="10dp"
					android:text="@string/strike_strikethrough_strike"/>
		</TableRow>

		<TableRow>
			<TextView
					android:textIsSelectable="true"
					android:padding="10dp"
					android:text="super^script" />
			<TextView
					android:padding="10dp"
					android:text="@string/comment_help_super_script"/>
		</TableRow>

		<TableRow>
			<Button android:text="More help"
					android:id="@+id/comment_help_more"
					android:layout_column="1"
					android:drawableRight="?rrIconLink"
				/>

		</TableRow>

	</TableLayout>

</LinearLayout>
